# numpty

./: .gitignore  Cargo.toml  README.md  pyproject.toml
examples/: ninvaders.py  nudoku.py
src/: color.rs  keys.rs  lib.rs  lines.rs  protocol.rs  pty.rs  term.rs
